[package]
name = "agricultor"
version = "0.1.0"
authors = ["ido66667"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.1"
legion = "0.4.0"

serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }

log = "0.4.14"
log4rs = { version = "1.0.0", features = ["file_appender"] }

rand = "0.8.4"